--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
         <a class="nav-item nav-link" routerLink="formulario" >EP2. Formulario</a>
         <a class="nav-item nav-link" routerLink="lista">Ep3. Lista</a>
         <a class="nav-item nav-link" routerLink="formulario2">EP4. Formulario2</a>
+        <a class="nav-item nav-link" routerLink="lista2">EP5. ListaServicio</a>
 
     </div>
 </nav>
