--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,10 @@
         <a class="nav-item nav-link" routerLink="lista">Ep3. Lista</a>
         <a class="nav-item nav-link" routerLink="formulario2">EP4. Formulario2</a>
         <a class="nav-item nav-link" routerLink="lista2">EP5. ListaServicio</a>
+        <a class="nav-item nav-link" routerLink="rutas">EP6. Rutas</a>
+        <a class="nav-item nav-link" routerLink="pipe">EP7. Pipes</a>
+
+
 
     </div>
 </nav>
