--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
         <a class="nav-item nav-link" routerLink="lista2">EP5. ListaServicio</a>
         <a class="nav-item nav-link" routerLink="rutas">EP6. Rutas</a>
         <a class="nav-item nav-link" routerLink="pipe">EP7. Pipes</a>
+        <a class="nav-item nav-link" routerLink="comunicacion">EP8. Comunicacion</a>
+
 
 
 
