--- a/src/app/componentes/pipes/pipes.component.html
+++ b/src/app/componentes/pipes/pipes.component.html
@@ -1,1 +1,12 @@
-<p>pipes works!</p>
+<div>
+    <div class="card">
+        <div class="card-header">Pipes</div>
+        <div class="card-body">
+            <h3>texto normal, antes del pipe:</h3>
+            <h2>este es una prueba</h2>
+            <h3>usando pipe:</h3>
+            <h3>{{ 'este es una prueba' | toUpperCase}}</h3>
+        </div>
+    </div>
+    
+</div>
